# mmdetection_libtorch

./: CMakeLists.txt  README.md
config/: config_faster_rcnn.json  config_re.json  config_ssd.json
example/: CMakeLists.txt  test_detector.cpp
include/: types.hpp
src/: CMakeLists.txt  types.cpp
src/anchor/: AnchorGenerator.cpp
src/bbox/: bbox.cpp
src/detector/: DetectorCommon.cpp  DetectorCommon.hpp  DetectorFasterRcnn.cpp  DetectorFasterRcnn.hpp  DetectorSSD.cpp
src/roi_align/: RoIAlign.cpp  RoIAlign.hpp  roi_align_kernel.cu
src/single_roi_extractor/: SingleRoIExtractor.cpp
src/transform/: transforms.cpp
tools/: get_trace_fasterrcnn.py  get_trace_ssd_retinanet.py  single_stage.py  two_stage.py
